spacing issues

--- a/src/pages/map/MapContainer.css
+++ b/src/pages/map/MapContainer.css
@@ -1,6 +1,6 @@
 .map-container {
   position: relative;
-  height: 700px;
+  height: 1100px;
   width: 80%;
 }
 
@@ -14,14 +14,14 @@
 
 .loading {
   z-index: 100;
-  height: 700px;
+  height: 1100px;
   width: 80%;
   box-shadow: inset 2000px 0 0 0 rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 1);
 }
 
 .map-source-options {
-  right: 0;
+  right: 2rem;
 }
 
 .mapboxgl-popup {
